# CODE

./: 1.txt  README.md
MD/: CMakeLists.txt  LinearEqu.cpp  LinearEqu.h  Matrix.cpp  Matrix.h  main.cpp  pointer recognition.md
OpenCVTest/: CMakeLists.txt  OpenCVCapturePictures.cpp  OpenCVCapturePictures.h  main.cpp
Single File/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
